# superbased-observer

./: .env.example  .gitattributes  .gitignore  .golangci.yml  CHANGELOG.md  Dockerfile.observer-org  LICENSE  Makefile  PRIVACY.md  README.md  go.mod  go.sum  observer-test.toml
.github/workflows/: ci.yml  npm-release.yml  teams-golden-path.yml  website-deploy.yml
charts/observer-org/: .helmignore  Chart.yaml  values.yaml
cmd/antigravity-bridge/: main.go  main_test.go
cmd/compress-bench/: main.go
cmd/observer/: advise.go  advisor_digest.go  backfill.go  backfill_test.go  cache_health.go  cache_health_test.go  claude.go  claude_test.go  codex.go  codex_capture_check.go  codex_capture_check_test.go  codex_config_check.go  codex_config_check_test.go  codex_config_write.go  codex_config_write_test.go  codex_test.go  configcmd.go  configcmd_test.go  cost.go  cost_test.go  dashboard.go  dbcmd.go  demo_seed.go  demo_seed_test.go  (+66 more)
cmd/observer-org/: doctor.go  main.go  main_test.go  policy.go  quickstart.go  scrub.go  scrub_test.go
compression-testing/: .gitignore  GATE2_3_VERDICT.md  PLAN.md  ab-on.toml  ab_run.sh  compression_curve.py  gsm8k_results.jsonl  gsm8k_results_50_fewshot.jsonl  gsm8k_results_next150_promptfix_v3.jsonl  smoke_test.go
design/: SuperBased Observer Dashboard.html  app.css  app.jsx  charts.jsx  data.js  icons.jsx  page-actions.jsx  page-analysis.jsx  page-compression.jsx  page-cost.jsx  page-discovery.jsx  page-overview.jsx  page-patterns.jsx  page-sessions.jsx  page-settings.jsx  page-tools.jsx  primitives.jsx  provider-icons.jsx  shell.jsx  tokens.css
docs/: codex-compression-recipe.md  codex-shared-app-server-gotcha.md  compression-modes.md  mcp-get-file-reference.md  mcp-get-relations-reference.md  mcp-get-symbols-reference.md  mcp-retrieve-stashed-reference.md  proxy-live-test-recipe.md  teams-architecture.md  teams-getting-started.md  teams-operations.md  vscode-extension-user-guide.md  vscode-extension.md
npm/: README.md
pypi/: README.md
pypi/observer/: .gitignore  README.md  README.template.md  pyproject.toml
pypi/observer/src/observer/: __main__.py
scripts/: ab-claude-report.sh  ab-claude-setup.sh  ab-claude-start.sh  ab-claude-stop.sh  ab-codex-report.sh  ab-codex-setup.sh  ab-codex-start.sh  ab-codex-stop.sh  build-distribution-readmes.sh  codex-hook-tee.sh  install.sh  sync-npm-version.sh  verify-distribution-readmes.sh
vscode/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
web2/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+1211 files in other folders)
